--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ locale                   : "en-US"
 title                    : "Aleksis Pirinen"
 title_separator          : "-"
 name                     : &name "Aleksis Pirinen"
-description              : &description "personal description"
-url                      : https://aleksis.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "Machine learning researcher"
+url                      : https://aleksispi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "aleksispi/aleksispi.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Aleksis Pirinen"
   avatar           : "profile.png"
   bio              : "Senior ML researcher; PhD in computer vision"
-  location         : "Location"
+  location         : "Lund, Sweden"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=paBGTgsAAAAJ&hl=en"
-  email            :
+  email            : aleksis.pirinen@ri.se
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -96,25 +96,25 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "aleksispi"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "aleksis-pirinen"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
-  youtube          :
-  wikipedia        :
+  youtube          : "https://www.youtube.com/channel/UCmLIcTGecoEVs1ZImzwwvUA"
+  wikipedia        : 
 
 
 # Reading Files
