--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/@aleksispirinen7726/videos"
+  youtube          : #"https://www.youtube.com/@aleksispirinen7726/videos"
   wikipedia        : 
 
 
