--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/aleksis-pirinen-25758b1b4/"
+  linkedin         : "aleksis-pirinen-25758b1b4"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : #"https://www.youtube.com/@aleksispirinen7726/videos"
+  youtube          : "@aleksispirinen7726/videos"
   wikipedia        : 
 
 
