--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aleksis Pirinen"
-  avatar           : "https://aleksispi.github.io/files/aleksis.png"
+  avatar           : "aleksis.png"
   bio              : "Senior ML researcher; PhD in computer vision"
   location         : "Lund, Sweden"
   employer         :
