--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "aleksis-pirinen-25758b1b4"
+  RISE webpage     : "https://www.ri.se/sv/person/aleksis-pirinen"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
