--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Aleksis Pirinen"
   avatar           : "aleksis-less-tall.jpg"
-  bio              : "Senior ML researcher; PhD in computer vision; father; spare-time collapsologist"
+  bio              : "Senior ML researcher; PhD in computer vision; dad; spare-time collapsologist"
   location         : "Lund, Sweden"
   employer         :
   pubmed           : 
