--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://x.com/AleksisPi"
+  twitter          : "AleksisPi"
   vine             :
   weibo            :
   xing             :
