--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : #"aleksis-pirinen-25758b1b4"
+  bluesky          : "aleksispi" # Replace this with you Bluesky username
+  linkedin         : "aleksis-pirinen-25758b1b4"
   RISE webpage     : "https://www.ri.se/sv/person/aleksis-pirinen"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
