--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "AI for environment"
-    url: /ai-environment/ 
+  - title: "Publications"
+    url: /publications/ 
   - title: "Personal page"
     url: /personal/ 
   - title: "Notes"
